# vr2f

./: .gitignore  GitWorkflow.md  LICENSE  README.md  environment.yml  manual_check_raws.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
Analysis/R/Utils/: plot_confMat_Gilbert2021.R
Analysis/vrstereofem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Analysis/vrstereofem/Experiment/configFiles/: experimentConfig_72trials.json
Code/Python/Experiment/: generate_json.ipynb  test_configs.ipynb  utils.py
Code/Python/Experiment/configFiles/: experimentConfig_72trials.json
Literature/: PROJECT_NAME.bib  PUBLICATION_1.bib  PUBLICATION_2.bib
Organisation/: README_organisation.md
Pipeline/00_DataCleansing/: clean_raws.py  manual_check_evs.py  manual_check_raws.ipynb  validate_config.ipynb
Pipeline/00_cleansing/: clean_raws.py  manual_check_evs.py  manual_check_raws.ipynb
Pipeline/01_preprocessing/: 01-1-1_checkepochs.py  01-1_epoch.py  01-2-1_rejectICA.py  01-2_ICA.py  01-3_AR.py
Pipeline/02_decoding/: 02-1-1_plotters.ipynb  02-1-1_plotters.py  02-1_sensorspace.ipynb  02-1_sensorspace.py
Pipeline/02_decoding/.ipynb_checkpoints/: 02-1-1_plotters-checkpoint.ipynb
Pipeline/03_erps/: 03-1_erpanalysis.ipynb
Pipeline/Behavior/: 00_maintask.py
Pipeline/HPC/: AR.sh  DECOD_ET.sh  DECOD_SS.sh  ICA.sh
Results/: README_results.md
Sketchpad/: check_autoreject.ipynb  eeg_filters-probe.ipynb  et_analysis.ipynb  et_calc_offset_eog.ipynb  et_decoding.py  et_plotters.ipynb  test_pybv.py
code/: README.md
code/HPC/: AR.sh  DECOD_CROSS.sh  DECOD_ET.sh  DECOD_SS.sh  DECOD_STC.sh  PLOT_GAZESACC.sh  README.md
code/notebooks/: 03-1_erpanalysis.ipynb  et_decod_plotters.ipynb  et_plot_gaze.ipynb  et_preprocessing.ipynb  et_saccade_analysis.ipynb  test_tqdm.ipynb  vr2f.ipynb
code/notebooks/ERPs/: erp_analysis.ipynb
code/notebooks/behavior/: behavior_analysis.ipynb
code/notebooks/decoding/: decoding_plotters.ipynb  plot_brain.py
code/notebooks/eyetracking/: et_calc_sacc_and_fixations.ipynb  et_decod_plotters.ipynb  et_decod_plotters_v2.ipynb  et_fixations_analysis.ipynb  et_preprocessing.ipynb  et_saccades_analysis.ipynb
code/notebooks/eyetracking/backup/: et_plot_gaze.ipynb
code/notebooks/manual_checks/raw_eeg/: manual_check_raws.ipynb
code/notebooks/manual_checks/unity_configs/: validate_config.ipynb
code/tests/: __init__.py  test_vr2f.py
code/vr2f/: __init__.py  helpers.py  preprocess.py  staticinfo.py
code/vr2f/behavior/: 00_maintask.py  __init__.py  intensity_rating.py  maintask.py
code/vr2f/cleansing/: __init__.py  clean_raws.py  manual_check_evs.py  manual_check_raws.ipynb  validate_config.ipynb
code/vr2f/decoding/: 02-1-1_plotters.ipynb  02-1-1_plotters.py  02-1_sensorspace.ipynb  02-1_sensorspace.py  crossdecoding.py  decoding.py  decoding_calc_source_timecourses.py  plot_stc.py  plotters.py
code/vr2f/eyetracking/: et_decoding.py  et_plot_gaze_saccades.py  et_preprocessing.py  et_utils.py  et_viz_utils.py  lag_calculator_et_vs_eog.py  ms_toolbox.py
code/vr2f/preprocessing/: 01-1-1_checkepochs.py  01-1_epoch.py  01-2-1_rejectICA.py  01-2_ICA.py  01-3_AR.py  check_autoreject_globalrejects.py  check_epochs.py  make_epochs.py  reject_ica.py  run_autoreject.py  run_ica.py
code/vr2f/utils/: access_keeper.py  plot_faces.py  stats.py
literature/: PUBLICATION_1.bib  PUBLICATION_2.bib  vr2f.bib
src/: README_analysis.md
src/Python/testpkg/: yoyo.py
src/Python/vr2fem_analyses/: clean_raws.py  helpers.py  preprocess.py  staticinfo.py
src/Python/vr2fem_analyses.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Python/vr2fem_analyses/utils/: access_keeper.py
src/Python/vrstereofem_analyses.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vr2fem_analyses/: hansi.py
tests/: __init__.py
