[metadata]
name = vrstereofem
description = Analyses vrstereofem study (2022)
author = Felix Klotzsche
license = MIT
license_file = LICENSE
version = 0.0.1
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages =
    vr2fem_analyses
python_requires = >=3.8, <3.11

install_requires =
    matplotlib
    numpy>=1.23.1
    pandas==1.4.3
    toml
    setuptools
zip_safe>= False

[options.extras_require]
testing =
    flake8>=5.0.4
    tox>=3.25.1
    pytest>=7.1.2
    pytest-cov>=3.0
    mypy>=0.971

[options.package_data]
vr2fem_analyses = py.typed

[flake8]
max-line-length = 120
